@@ -6,14 +6,14 @@ Index: nova-2011.3~bzr1113/nova/virt/libvirt/connection.py
 ===================================================================
 --- nova-2011.3~bzr1113.orig/nova/virt/libvirt/connection.py
 +++ nova-2011.3~bzr1113/nova/virt/libvirt/connection.py
-@@ -669,8 +669,8 @@
+@@ -681,8 +681,8 @@
          ajaxterm_cmd = 'sudo socat - %s' \
                         % get_pty_for_instance(instance['name'])
- 
--        cmd = '%s/tools/ajaxterm/ajaxterm.py --command "%s" -t %s -p %s' \
--              % (utils.novadir(), ajaxterm_cmd, token, port)
-+        cmd = 'ajaxterm --command "%s" -t %s -p %s -T 300' \
-+              % (ajaxterm_cmd, token, port)
- 
-         subprocess.Popen(cmd, shell=True)
+
+-        cmd = ['%s/tools/ajaxterm/ajaxterm.py' % utils.novadir(),
+-               '--command', ajaxterm_cmd, '-t', token, '-p', port]
++        cmd = ['ajaxterm', '--command', ajaxterm_cmd, '-t', token,
++                '-p', port, '-T', '300']
+
+         utils.execute(cmd)
          return {'token': token, 'host': host, 'port': port}
